syntax = "proto3";

service ChatService{
    rpc createchat(CreateChatRequest) returns (CreateChatResponse);
    rpc getChat(GetChatRequest) returns (stream GetChatResponse);
    rpc sendMessage(SendMessageRequest) returns (CreateChatResponse);
    rpc getMyChatList(ChatListRequest) returns (ChatListResponse);
}

message Message{
    string by=1;
    string name=2;
    string message=3;
    string time=4;
}

message CreateChatRequest{
    string user1 = 1;
    string user2 = 2;
}

message CreateChatResponse{
    string res = 1;
}

message GetChatRequest{
    string user1 = 1;
    string user2 = 2;
}

message GetChatResponse{
    Message msg = 1;
}

message SendMessageRequest{
    string myID = 1;
    string friendID = 2;
    Message message = 3;
}

message ChatListRequest{
    string myID = 1;
}

message ChatList{
    string id = 1;
    string name = 2;
}

message ChatListResponse{
    repeated ChatList list = 1; 
}